fix pomo counter display on mobile

--- a/client/src/components/PomoIcon.css
+++ b/client/src/components/PomoIcon.css
@@ -1,3 +1,12 @@
-.pomo-img:first-of-type {
+.pomo-img-container:first-of-type {
   margin-left: 16px;
+}
+
+@media only screen and (max-device-width: 800px) {
+  /* push pomo counters onto new line on mobile */
+  .pomo-img-container:first-of-type:before {
+    content: " ";
+    clear: right;
+    display: block;
+  }
 }
